add eigen to cmakelists

--- a/yak/CMakeLists.txt
+++ b/yak/CMakeLists.txt
@@ -63,6 +63,11 @@ if(${CUDA_VERSION_STRING} VERSION_GREATER "4.1")
 APPEND_TARGET_ARCH_FLAGS()
 message(STATUS "CUDA_BIN_ARCH ${CUDA_ARCH_BIN}")
 
+SET( EIGEN3_INCLUDE_DIR "$ENV{EIGEN3_INCLUDE_DIR}" )
+IF( NOT EIGEN3_INCLUDE_DIR )
+    MESSAGE( FATAL_ERROR "Please point the environment variable EIGEN3_INCLUDE_DIR to the include directory of your Eigen3 installation.")
+ENDIF()
+
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   image_transport
@@ -107,6 +112,7 @@ include_directories(
   ${OpenCV_INCLUDE_DIRS}
   ${CUDA_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIR}
 )
 message("debugging")
 message("PCL_INCLUDE_DIRS: ${PCL_INCLUDE_DIRS}")
