--- a/yak/package.xml
+++ b/yak/package.xml
@@ -20,6 +20,7 @@
   <depend>visualization_msgs</depend>
   <depend>eigen</depend><!--maps to Eigen3 -->
   <depend>tf_conversions</depend>
+  <depend>cmake_modules</depend>
 
   <export>
   </export>
