--- a/nbv_planner/package.xml
+++ b/nbv_planner/package.xml
@@ -24,6 +24,7 @@
   <depend>pcl_ros</depend>
 
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>octomap_server</exec_depend>
 
   <export>
   </export>
